--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Equipartition Magnetic Field Estimator</title>
 </head>
 <body style="text-align: center; font-family: sans-serif; padding-top: 100px;">
-  <h1>🌀 Equipartition Magnetic Field Estimator</h1>
+  <h1>🌀 Lobe Magnetic Field Estimator v2 with integrated cosmology calculator</h1>
   <p>This tool estimates magnetic fields and energy densities in radio galaxies.</p>
   <a href="https://equipartition-magnetic-field-intp4riffghw2rwtt2hzxq.streamlit.app/"
      style="padding: 12px 24px; background-color: #4CAF50; color: white; text-decoration: none; font-size: 18px; border-radius: 5px;">
